--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <title>React App</title>
 </head>
 <body>
-  <h1>hello boiiiii</h1>
+  <h1>hello</h1>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 </body>
