--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>React App</title>
 </head>
-<body>
+<body background-color="linear-gradient(to right, 
+#e4afcb 0%, #b8cbb8 0%, #b8cbb8 0%, 
+#e2c58b 30%, #c2ce9c 64%, #7edbdc 100%)">
   <h1></h1>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
